tests/src/frontend/syntax/invalid/did_you_mean_sup.sk
class A{pos: String}

fun f(a: A): String {
  a.cla_pos
}
